<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ciberdictionary.ciberdictionary.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lookUpLayout"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/enterWordHint"
                android:id="@+id/wordInput"
                android:textAlignment="center"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lookUpButton"
                android:id="@+id/btn_buscar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:weightSum="0.8">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/type"
                android:orientation="vertical"
                android:layout_weight="0.1"
                android:gravity="center">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text=""
                    android:id="@+id/word_id"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/typeString"
                    android:textAlignment="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:hint="El tipo de palabra"
                    android:id="@+id/word_type"
                    android:textAlignment="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/definition"
                android:orientation="vertical"
                android:layout_weight="0.25"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/definitionString"
                    android:textAlignment="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:hint="La definicion de la palabra"
                    android:id="@+id/word_definition"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textAlignment="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/example"
                android:orientation="vertical"
                android:layout_weight="0.25"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exampleString"
                    android:textAlignment="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:hint="Un ejemplo de su uso en una oración"
                    android:id="@+id/word_example"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textAlignment="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="0.2"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modify_btn"
                    android:text="MODIFY"
                    android:visibility="gone"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editString"
                    android:id="@+id/edit_button"
                    android:visibility="gone"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deleteString"
                    android:id="@+id/delete_button"
                    android:visibility="gone"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/webString"
                    android:id="@+id/web_button"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goLocationString"
                android:id="@+id/btn_vermapa"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clearfieldsString"
                android:id="@+id/btn_clearFields"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clearDBString"
                android:id="@+id/btn_clearDB"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
